tests/programs/invalid/InvalidAbstractMethod.java
public class InvalidAbstractMethod {
    public abstract void abstractMethod() {
        // Invalid abstract method with a body
    }
}
